Fix preview overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,6 @@ main {
   }
 
   .entry {
-    margin-top: 2rem;
+    margin-top: 2rem !important;
   }
 }
